Secure endpoints with `@PreAuthorize` annotations for `USER` and `ADMIN` roles across multiple controllers; update `SecurityConfig` for public access configurations.