@@ -5,6 +5,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.readtogether.common.BaseIntegrationTest;
+import org.readtogether.readingroom.common.enums.InvitationType;
 import org.readtogether.readingroom.fixtures.ReadingRoomRequestFixtures;
 import org.readtogether.readingroom.model.request.CreateReadingRoomRequest;
 import org.readtogether.readingroom.model.request.InviteToRoomRequest;
@@ -15,6 +16,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
+
+import java.util.List;
 
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
@@ -37,7 +40,6 @@ class InvitationControllerIntegrationTests extends BaseIntegrationTest {
         String password = "Password1!";
         String token = registerAndLogin(email, password, "Invitee", "User");
 
-        // When: get my invitations
         mockMvc.perform(get("/api/v1/invitations/my-invitations")
                         .header("Authorization", "Bearer " + token))
                 .andExpect(status().isOk())
@@ -48,7 +50,7 @@ class InvitationControllerIntegrationTests extends BaseIntegrationTest {
     @DisplayName("GET /api/v1/invitations/{token} should return invitation details")
     void shouldGetInvitationByToken() throws Exception {
         // Given: user creates room and invites someone
-        String hostEmail = "host@test.local";
+        String hostEmail = "hosttest.local@gmail.com";
         String hostPassword = "Password1!";
         String hostToken = registerAndLogin(hostEmail, hostPassword, "Host", "User");
 
@@ -77,7 +79,9 @@ class InvitationControllerIntegrationTests extends BaseIntegrationTest {
         String invitationToken = inviteNode.path(0).path("invitationToken").asText();
 
         // When: get invitation by token
-        mockMvc.perform(get("/api/v1/invitations/" + invitationToken))
+        mockMvc.perform(get("/api/v1/invitations/" + invitationToken)
+                        .header("Authorization", "Bearer " + hostToken)
+                        .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.invitationToken").value(invitationToken))
                 .andExpect(jsonPath("$.readingRoomId").value(roomId))
@@ -88,11 +92,11 @@ class InvitationControllerIntegrationTests extends BaseIntegrationTest {
     @DisplayName("POST /api/v1/invitations/{token}/accept should accept invitation")
     void shouldAcceptInvitation() throws Exception {
         // Given: user creates room and invites someone
-        String hostEmail = "host@test.local";
+        String hostEmail = "host2@test.local";
         String hostPassword = "Password1!";
         String hostToken = registerAndLogin(hostEmail, hostPassword, "Host", "User");
 
-        String inviteeEmail = "invitee@test.local";
+        String inviteeEmail = "invitee2@test.local";
         String inviteePassword = "Password1!";
         String inviteeToken = registerAndLogin(inviteeEmail, inviteePassword, "Invitee", "User");
 
@@ -108,15 +112,15 @@ class InvitationControllerIntegrationTests extends BaseIntegrationTest {
         JsonNode roomNode = objectMapper.readTree(roomResult.getResponse().getContentAsString());
         String roomId = roomNode.path("id").asText();
 
-        // Create invitation with the invitee's email
+        // Create an invitation with the invitee's email
         InviteToRoomRequest inviteRequest = ReadingRoomRequestFixtures.createInviteToRoomRequest(
-                org.readtogether.readingroom.common.enums.InvitationType.EMAIL,
-                java.util.Arrays.asList(inviteeEmail),
+                InvitationType.EMAIL,
+                List.of(inviteeEmail),
                 null,
                 "Please join our reading room!",
                 24
         );
-        
+
         MvcResult inviteResult = mockMvc.perform(post("/api/v1/rooms/" + roomId + "/invitations")
                         .header("Authorization", "Bearer " + hostToken)
                         .contentType(MediaType.APPLICATION_JSON)
@@ -143,7 +147,12 @@ class InvitationControllerIntegrationTests extends BaseIntegrationTest {
                 .andExpect(status().isUnauthorized());
     }
 
-    private String registerAndLogin(String email, String password, String firstName, String lastName) throws Exception {
+    private String registerAndLogin(
+            String email,
+            String password,
+            String firstName,
+            String lastName) throws Exception {
+
         RegisterRequest register = RequestFixtures.createRegisterRequest(email, password, firstName, lastName, "user");
 
         mockMvc.perform(post("/api/v1/users/register")
@@ -154,7 +163,10 @@ class InvitationControllerIntegrationTests extends BaseIntegrationTest {
         return loginAndGetAccessToken(email, password);
     }
 
-    private String loginAndGetAccessToken(String email, String password) throws Exception {
+    private String loginAndGetAccessToken(
+            String email,
+            String password) throws Exception {
+
         LoginRequest login = RequestFixtures.createLoginRequest(email, password);
 
         MvcResult loginResult = mockMvc.perform(post("/api/v1/users/login")
